# hlockx

./: LICENSE  README  TODO  hlockx.cabal
src/: DPMS.hsc  Hlockx.hs  Main.hs  PwUtils.hs  Tests.hs  Utils.hs  XUtils.hs  XUtils.hsc  hlockx.hs
src/Lib/: Crypt.hs  README  Shadow.hsc
